UC-444 Pathfinder 2 v2 npcs

--- a/Pathfinder Second Edition by Roll20/translations/en.json
+++ b/Pathfinder Second Edition by Roll20/translations/en.json
@@ -1,5 +1,4 @@
 {
-	"1d6": "1d6",
 	"#_damage_dice": "# Damage Dice",
 	"+11": "+11",
 	"+13": "+13",
@@ -14,6 +13,7 @@
 	"1d10": "1d10",
 	"1d12": "1d12",
 	"1d4": "1d4",
+	"1d6": "1d6",
 	"1d8": "1d8",
 	"1st": "1st",
 	"1st-level": "1st LEVEL",
@@ -245,6 +245,10 @@
 	"m": "m",
 	"magic_tradition": "magic tradition",
 	"magic_traditions": "magic traditions",
+	"magical_tradition_arcane": "magical tradition arcane",
+	"magical_tradition_divine": "magical tradition divine",
+	"magical_tradition_occult": "magical tradition occult",
+	"magical_tradition_primal": "magical tradition primal",
 	"martial": "martial",
 	"martial_weapon_proficiencies_rank": "martial weapon proficiencies rank",
 	"master": "master",
@@ -313,6 +317,9 @@
 	"organizations": "organizations",
 	"other": "other",
 	"other_effects": "other effects",
+	"other_item_bulk": "other item bulk",
+	"other_item_name": "other item name",
+	"other_item_notes": "other item notes",
 	"other_items": "other items",
 	"other_weapon_proficiencies_name": "other weapon proficiencies name",
 	"other_weapon_proficiencies_rank": "other weapon proficiencies rank",
@@ -378,6 +385,9 @@
 	"rank": "rank",
 	"rare-large": "rare, large, aquatic",
 	"reaction": "reaction",
+	"readied_item_bulk": "readied item bulk",
+	"readied_item_name": "readied item name",
+	"readied_item_notes": "readied item notes",
 	"readied_items": "readied items",
 	"ref": "ref",
 	"ref-save": "REF SAVE",
@@ -404,7 +414,13 @@
 	"senses_notes": "sense notes",
 	"shield": "shield",
 	"shield_bonus_to_ac": "Shield bonus to AC",
+	"show_or_hide_other_item_notes": "show or hide other item notes",
+	"show_or_hide_other_item_settings": "show or hide other item settings",
+	"show_or_hide_readied_item_notes": "show or hide readied item notes",
+	"show_or_hide_readied_item_settings": "show or hide readied item settings",
 	"show_or_hide_weapon_notes": "show or hide weapon notes",
+	"show_or_hide_worn_item_notes": "show or hide worn item notes",
+	"show_or_hide_worn_item_settings": "show or hide worn item settings",
 	"simple": "simple",
 	"simple_weapon_proficiencies_rank": "simple weapon proficiencies rank",
 	"single_action": "single action",
@@ -421,8 +437,22 @@
 	"speed_in_feet": "speed in feet",
 	"spell tradition": "SPELL TRADITION",
 	"spell": "spell",
+	"spell_attack_key_ability": "spell attack key ability",
+	"spell_attack_key_ability_select": "spell attack key ability select",
+	"spell_attack_notes": "spell attack notes",
+	"spell_attack_proficiency": "spell attack proficiency",
+	"spell_attack_rank": "spell attack rank",
 	"spell_attack_roll": "spell attack roll",
+	"spell_attack_temp": "spell attack temporary",
+	"spell_attack_temporary": "spell attack temporary",
+	"spell_base_dc": "spell base dc",
 	"spell_dc": "spell dc",
+	"spell_dc_key_ability": "spell dc key ability",
+	"spell_dc_key_ability_select": "spell dc key ability select",
+	"spell_dc_notes": "spell dc notes",
+	"spell_dc_proficiency": "spell dc proficiency",
+	"spell_dc_rank": "spell dc rank",
+	"spell_dc_temporary": "spell dc temporary",
 	"spell_slots_per_day": "spell slots per day",
 	"spellcasting_npc": "spellcasting npc",
 	"spells": "spells",
@@ -479,42 +509,30 @@
 	"wisdom_notes": "wisdom notes",
 	"wisdom_score": "wisdom score",
 	"wisdom_score_temporary": "wisdom score temporary",
+	"work_item_invest_max_10": "work item invest (max 10)",
 	"worn_item": "worn item",
+	"worn_item_bulk": "worn item bulk",
+	"worn_item_notes": "worn item notes",
 	"wounded": "wounded",
 	"x/day": "X/DAY",
 	"xp": "xp",
-	"show_or_hide_readied_item_settings": "show or hide readied item settings",
-	"show_or_hide_readied_item_notes": "show or hide readied item notes",
-	"readied_item_name": "readied item name",
-	"readied_item_bulk": "readied item bulk",
-	"readied_item_notes": "readied item notes",
-	"show_or_hide_worn_item_settings": "show or hide worn item settings",
-	"show_or_hide_worn_item_notes": "show or hide worn item notes",
-	"work_item_invest_max_10": "work item invest (max 10)",
-	"worn_item_bulk": "worn item bulk",
-	"worn_item_notes": "worn item notes",
-	"show_or_hide_other_item_settings": "show or hide other item settings",
-	"show_or_hide_other_item_notes": "show or hide other item notes",
-	"other_item_name": "other item name",
-	"other_item_bulk": "other item bulk",
-	"other_item_notes": "other item notes",
-	"spell_attack_key_ability_select": "spell attack key ability select",
-	"spell_attack_key_ability": "spell attack key ability",
-	"spell_attack_temp": "spell attack temporary",
-	"spell_attack_proficiency": "spell attack proficiency",
-	"spell_attack_temporary": "spell attack temporary",
-	"spell_attack_rank": "spell attack rank",
-	"spell_attack_notes": "spell attack notes",
-	"spell_base_dc": "spell base dc",
-	"spell_dc_key_ability": "spell dc key ability",
-	"spell_dc_proficiency": "spell dc proficiency",
-	"spell_dc_temporary": "spell dc temporary",
-	"spell_dc_key_ability_select": "spell dc key ability select",
-	"spell_dc_rank": "spell dc rank",
-	"spell_dc_notes": "spell dc notes",
-	"magical_tradition_arcane": "magical tradition arcane",
-	"magical_tradition_primal": "magical tradition primal",
-	"magical_tradition_occult": "magical tradition occult",
-	"magical_tradition_divine": "magical tradition divine",
+	,"experienced_points": "experienced points"
+	,"class_dc_key_ability": "class dc key ability"
+	,"class_dc_key_ability": "class dc key ability select"
+	,"class_dc_rank_select": "class dc rank select"
+	,"class_dc_notes": "class dc notes"
+	,"class_dc_temporary": "class dc temporary"
+	,"class_dc_item": "class dc item"
+	,"armor_class_ability_select": "armor class ability select"
+	,"armor_class_cap": "armor class cap"
+	,"armor_class_rank_select": "armor class rank select"
+	,"armor_class_ability_input": "armor class ability input"
+	,"armor_class_item": "armor class item"
+	,"armor_class_temporary": "armor class temporary"
+	,"unarmed_rank_select": "unarmored rank select"
+	,"light_armor_rank_select": "light armor rank select"
+	,"medium_armor_rank_select": "medium armor rank select"
+	,"heavy_armor_rank_select":"heavy armor rank select
+	,"armor_class_notes": "armor class notes"
 	"disclaimer": "© 2019 Paizo Inc. Paizo, the Paizo golem logo, Pathfinder, and the Pathfinder logo are registered trademarks of Paizo Inc.  Pathfinder Adventure Path, Pathfinder Roleplaying Game, Pathfinder World Guide, and the Pathfinder ‘P’ logo are trademarks of Paizo Inc.  All Paizo titles and Paizo's character names and distinctive likenesses are property and copyright of Paizo, Inc. in the United States and other countries."
 }
