add title translations

--- a/Pathfinder Second Edition by Roll20/translations/en.json
+++ b/Pathfinder Second Edition by Roll20/translations/en.json
@@ -70,6 +70,13 @@
 	"area": "area",
 	"armor": "armor",
 	"armor_class": "armor class",
+	"armor_class_ability_input": "armor class ability input",
+	"armor_class_ability_select": "armor class ability select",
+	"armor_class_cap": "armor class cap",
+	"armor_class_item": "armor class item",
+	"armor_class_notes": "armor class notes",
+	"armor_class_rank_select": "armor class rank select",
+	"armor_class_temporary": "armor class temporary",
 	"at-will": "AT WILL",
 	"athletics": "athletics",
 	"atk": "ATK",
@@ -110,6 +117,12 @@
 	"class feat": "CLASS FEAT",
 	"class": "class",
 	"class_dc": "class dc",
+	"class_dc_item": "class dc item",
+	"class_dc_key_ability": "class dc key ability",
+	"class_dc_key_ability_select": "class dc key ability select",
+	"class_dc_notes": "class dc notes",
+	"class_dc_rank_select": "class dc rank select",
+	"class_dc_temporary": "class dc temporary",
 	"class_feats_and_abilities": "class feats and abilities",
 	"claw": "claw",
 	"con": "con",
@@ -172,6 +185,7 @@
 	"ethnicity": "ethnicity",
 	"evocation": "EVOCATION",
 	"experience-points-xp": "experience points (xp)",
+	"experienced_points": "experienced points",
 	"expert": "expert",
 	"expert_4_level": "expert 4+level",
 	"failure": "failure",
@@ -195,6 +209,7 @@
 	"gp": "gp",
 	"hardness": "hardness",
 	"heavy": "heavy",
+	"heavy_armor_rank_select": "heavy armor rank select",
 	"height-char": "height",
 	"hero_points": "hero points",
 	"hit_points": "hit points",
@@ -231,6 +246,7 @@
 	"legendary_8_level": "legendary 8+level",
 	"level": "level",
 	"light": "light",
+	"light_armor_rank_select": "light armor rank select",
 	"likes": "likes",
 	"lore": "lore",
 	"lore_ability_input": "lore ability input",
@@ -258,6 +274,7 @@
 	"maximum_hit_points": "maximum hit points",
 	"medicine": "medicine",
 	"medium": "medium",
+	"medium_armor_rank_select": "medium armor rank select",
 	"melee_attack_damage": "melee attack damage",
 	"melee_attack_damage_type": "melee attack damage type",
 	"melee_attack_modifier": "melee attack modifier",
@@ -484,6 +501,7 @@
 	"trigger": "trigger",
 	"two-action_activity": "two-action activity",
 	"type": "type",
+	"unarmed_rank_select": "unarmored rank select",
 	"unarmored": "unarmored",
 	"untrained": "untrained",
 	"untrained_0": "untrained +0",
@@ -516,23 +534,5 @@
 	"wounded": "wounded",
 	"x/day": "X/DAY",
 	"xp": "xp",
-	,"experienced_points": "experienced points"
-	,"class_dc_key_ability": "class dc key ability"
-	,"class_dc_key_ability": "class dc key ability select"
-	,"class_dc_rank_select": "class dc rank select"
-	,"class_dc_notes": "class dc notes"
-	,"class_dc_temporary": "class dc temporary"
-	,"class_dc_item": "class dc item"
-	,"armor_class_ability_select": "armor class ability select"
-	,"armor_class_cap": "armor class cap"
-	,"armor_class_rank_select": "armor class rank select"
-	,"armor_class_ability_input": "armor class ability input"
-	,"armor_class_item": "armor class item"
-	,"armor_class_temporary": "armor class temporary"
-	,"unarmed_rank_select": "unarmored rank select"
-	,"light_armor_rank_select": "light armor rank select"
-	,"medium_armor_rank_select": "medium armor rank select"
-	,"heavy_armor_rank_select":"heavy armor rank select
-	,"armor_class_notes": "armor class notes"
 	"disclaimer": "© 2019 Paizo Inc. Paizo, the Paizo golem logo, Pathfinder, and the Pathfinder logo are registered trademarks of Paizo Inc.  Pathfinder Adventure Path, Pathfinder Roleplaying Game, Pathfinder World Guide, and the Pathfinder ‘P’ logo are trademarks of Paizo Inc.  All Paizo titles and Paizo's character names and distinctive likenesses are property and copyright of Paizo, Inc. in the United States and other countries."
 }
