--- a/Forbidden_Lands/translations/fr.json
+++ b/Forbidden_Lands/translations/fr.json
@@ -111,6 +111,7 @@
 	"mighty": "Puissant",
 	"moun-u": "MONTURE",
 	"mount": "Fontes de la monture",
+	"mounted": "Mounted",
 	"move": "Manœuvres",
 	"name": "Nom",
 	"near": "Près",
