--- a/Forbidden_Lands/translations/zu.json
+++ b/Forbidden_Lands/translations/zu.json
@@ -111,6 +111,7 @@
 	"mighty": "crwdns90978:0crwdne90978:0",
 	"moun-u": "crwdns90980:0crwdne90980:0",
 	"mount": "crwdns90982:0crwdne90982:0",
+	"mounted": "crwdns117620:0crwdne117620:0",
 	"move": "crwdns90984:0crwdne90984:0",
 	"name": "crwdns90986:0crwdne90986:0",
 	"near": "crwdns90988:0crwdne90988:0",
