--- a/Magica_Logia/translations/ja.json
+++ b/Magica_Logia/translations/ja.json
@@ -206,5 +206,7 @@
 	"event-table-result-09": "魂のひらめき、愛の告白、妖しい抱擁……目標に対し恋に落ちる。目標に対する【運命】が１点上昇する。【運命】の属性は、「恋愛」になる。",
 	"event-table-result-10": "師弟関係、恋人同士、すれ違う想い……目標とあなたに関する未来がかいま見える。自分と目標は、互いに対する【運命】が１点上昇する。【運命】の属性は、それぞれが自由に決定できる。",
 	"event-table-result-11": "懐かしい表情、大切な思い出、伴侶となる予感……目標と優しい時間を過ごすことで、大切なことを思い出す。目標に対する【運命】が１点上昇する。【運命】の属性は、「血縁」になる。",
-	"event-table-result-12": "献身的な看護、魔法的な祝福、奇跡……自分は目標に救われる。目標に対する【運命】が１点上昇する。【運命】の属性は、自由に決定できる。もしも関係欄に疵があれば、その疵を一つ関係欄から消すことができる。"
+	"event-table-result-12": "献身的な看護、魔法的な祝福、奇跡……自分は目標に救われる。目標に対する【運命】が１点上昇する。【運命】の属性は、自由に決定できる。もしも関係欄に疵があれば、その疵を一つ関係欄から消すことができる。",
+	"book_list": "Books",
+	"relation_list": "relation"
 }
