--- a/Magica_Logia/translations/zh.json
+++ b/Magica_Logia/translations/zh.json
@@ -206,5 +206,7 @@
 	"event-table-result-09": "靈魂的碰撞、愛的告白、妖惑的擁抱……你愛上了那個人物。對該人物的【命運】上升1點。【命運】的屬性變成「戀愛」。",
 	"event-table-result-10": "師徒關係、戀人、單戀……可以預見有關於那個人物與你的未來等。相互的【命運】上升1點。【命運】的屬性由雙方自由決定。",
 	"event-table-result-11": "令人懷念的表情、最重要的回憶、成為伴侶的預感……與那個人物一起度過的溫柔時光，成為你最重要的回憶。對該人物的【命運】上升1點。【命運】的屬性變成「血緣」。",
-	"event-table-result-12": "獻身般的照護、魔法性的祝福、奇蹟……你被那個人物拯救了。對該人物的【命運】上升1點。【命運】的屬性可以自由決定。如果關係欄中有「疵」的話，可以從關係欄當中消除一個「疵」。"
+	"event-table-result-12": "獻身般的照護、魔法性的祝福、奇蹟……你被那個人物拯救了。對該人物的【命運】上升1點。【命運】的屬性可以自由決定。如果關係欄中有「疵」的話，可以從關係欄當中消除一個「疵」。",
+	"book_list": "Books",
+	"relation_list": "relation"
 }
