--- a/Call_of_Cthulhu_7th_Ed/translations/fr.json
+++ b/Call_of_Cthulhu_7th_Ed/translations/fr.json
@@ -31,8 +31,8 @@
 	"HP-u": "Points de vie/PV",
 	"HP-r-txt": "Jet de Points de vie/PV",
 	"current": "Actuel",
-	"majorwound-u": "Major Wound",
-	"pulphp-u": "Pulp HP",
+	"majorwound-u": "Blessure majeure",
+	"pulphp-u": "PdV Pulp",
 	"luck-u": "Chance",
 	"luck-r-txt": "Jet de Chance",
 	"damagebonus-u": "Impact",
@@ -42,7 +42,7 @@
 	"pulp-z": "Pulp",
 	"sanity-r-txt": "Jet de Santé mentale",
 	"start": "Initiale",
-	"current-u": "current",
+	"current-u": "actuel",
 	"max-u": "max",
 	"tempinsane-u": "Folie Temp. (5 pts) :",
 	"indefinsane-u": " : Folie Persist. (1/5 SAN)",
@@ -206,7 +206,7 @@
 	"talents-u": "Talents",
 	"shield-z": "Armure :",
 	"head-u": "Tête :",
-	"body-u": "Body",
+	"body-u": "Corps",
 	"l_arm-u": "Bras G. :",
 	"chest-u": "Torse :",
 	"r_arm-u": "Bras D. :",
@@ -243,21 +243,21 @@
 	"Other Skill #10": "Autre Compétence #10",
 	"companions&mounts-u": "Montures et Compagnions",
 	"vehicles-u": "Véhicules",
-	"cap-u": "Capacity",
-	"vehicleattack-u": "Vehicular Impact Attack",
-	"operatorskill": "Operator's Skill",
-	"MountedWeaponSkill": "Mounted Weapon Skill",
-	"generalinfo-u": "General Info",
-	"cargo-u": "Cargo",
-	"passengers-u": "Passengers",
+	"cap-u": "Capacité",
+	"vehicleattack-u": "Attaque: Impact avec le véhicule",
+	"operatorskill": "Compétence de l'opérateur",
+	"MountedWeaponSkill": "Compétence en tourelle d'armement",
+	"generalinfo-u": "Infos Générales",
+	"cargo-u": "Cargaison",
+	"passengers-u": "Passagers",
 	"san-u": "SAN",
 	"HP-z": "PV",
-	"MP-z": "MP",
+	"MP-z": "PM",
 	"armor-z": "Armure :",
 	"db-z": "Imp.",
 	"bdb-u": "Car/Imp",
 	"damage&db-z": "Dég+Imp",
-	"dam-z": "Dam",
+	"dam-z": "Dgt",
 	"MOV-u": "MVT",
 	"skill1": "Compétence 1",
 	"skill2": "Compétence 2",
