--- a/SavageWorlds-Tabbed/translations/fr.json
+++ b/SavageWorlds-Tabbed/translations/fr.json
@@ -103,15 +103,15 @@
     "health": "Santé",
     "wounds": "Blessures",
     "max-wounds": "Max Blessures",
-	"reduce-reason":"Atout/Capacités qui réduisent les pénalités de blessures",
+	"reduce-reason":"Atouts/Capacités qui réduisent les pénalités de blessures",
 	"increase-reason":"Handicaps/Capacités qui augmentent les pénalités de blessures",
-	"max-reason":"Atout/Capacités qui changent la pénalité maximale de blessures",
+	"max-reason":"Atouts/Capacités qui changent la pénalité maximale de blessures",
     "of": "sur",
     "fatigue": "Fatigue",
     "max-fatigue": "Max Fatigue level",
-	"reduce-reason-fatigue":"Atout/Capacités qui réduisent les pénalités de fatigue",
+	"reduce-reason-fatigue":"Atouts/Capacités qui réduisent les pénalités de fatigue",
 	"increase-reason-fatigue":"Handicaps/Capacités qui augmentent les pénalités de fatigue",
-	"max-reason-fatigue":"Atout/Capacités qui changent la pénalité maximale de fatigue",
+	"max-reason-fatigue":"Atouts/Capacités qui changent la pénalité maximale de fatigue",
     "no-nerves-of-steel": "Sans Nerfs d'Acier",
     "nerves-of-steel": "Nerfs d'Acier",
     "improved-nerves-of-steel": "Nerfs d'acier améliorés",
@@ -514,7 +514,7 @@
     "rippertech-text": "'Add Rippertech to the equipment section. Appropriate for Rippers",
     "ship-name-text": "Can be used for any setting where the characters may have a ship of some sort.",
     "ship-name": "Nom du vaisseau",
-    "talismans-text": "Shows Talismans repeating section on the Arcanum tab.",
+    "talismans-text": "Afficher la section Talismans",
     "tap-readout-text": "Displays the TAP Readout Information in one location. Used in the setting: Interface Zero 2.0",
     "worst-nightmare-text": "Record the Character's Worst Nightmare. This is important for Deadlands, but may be useful for other settings where a character's worst dreams can come true.",
     "initialize-statblock": "Initialize Statblock",
@@ -1164,8 +1164,11 @@
     "add-delete-arcane-backgrounds-description": "Add (<span class='sheet-pictos'>+</span>) and Delete (<span class='sheet-pictos'>#</span>) buttons have been added to allow you to configure each arcane background differently. The minimum number of arcane backgrounds supported is one (1). If you want no arcane bakgrounds, you should use the Settings tab and hide the Power Sections. The maximum number of arcane backgrounds supported is five (5).",
     "arcane-background-indicator-description": "Arcane Background Indicator: When there's more than one (1) arcane background, the Arcane Background Indicaor allows you to pick a color to associate with each arcane background. Once an individual power has been tied to an arcane background (defaults to the first arcane background), the power row will use the indicator as a background color, allowing you to quickly identify which arcane background each power goes with.  The power points display will also use the Arcane Background Indicator as the background color as quick reminder of what each color represents.",
     "fixed-copyright-issue": "Fixed the copyright notification issues.",
-    "start-attributes-at-d6-not-d4": "Start Attributes at d6 instead of d4",
-    "start-attributes-at-d6": "Start Attributes at d6",
-    "effect": "Effect",
-    "activate-talisman": "Activate Talisman"
+    "start-attributes-at-d6-not-d4": "Attributs par défaut à d6 au lieu de d4",
+    "effect": "Effet",
+    "activate-talisman": "Activer Talisman",
+	"added-talismans-section": "(Re-)Added Talismans section (activate in configuration tab)",
+	"added-ability-to-start-attributes-at-d6": "Ability to start Attributes at d6 instead of d4",
+	"fix-skill-dropdown-in-weapons": "Fix Skill drop down in Weapons Section",
+	"fixed-xp-advance-label-issue": "Fix XP/Advance Label issues"
 }
