Ability to change linked attribut for any skill

--- a/SavageWorlds-Tabbed/translations/fr.json
+++ b/SavageWorlds-Tabbed/translations/fr.json
@@ -682,6 +682,11 @@
     "sma-u": "(INT)",
     "spi-u": "(ÂME)",
     "vig-u": "(VIG)",
+	"(AGL)": "(AGL)",
+	"(SMA)": "(INT)",
+	"(SPI)": "(ÂME)",
+	"(STR)": "(FOR)",
+	"(VIG)": "(VIG)",
     "fencingstyle": "Fencing Style",
     "fencing-info": "Fencing School Information",
     "linked-attribute": "Attribut lié",
