added 3.8 version info

--- a/SavageWorlds-Tabbed/translations/fr.json
+++ b/SavageWorlds-Tabbed/translations/fr.json
@@ -1170,6 +1170,11 @@
     "arcane-background-indicator-description": "Arcane Background Indicator: When there's more than one (1) arcane background, the Arcane Background Indicaor allows you to pick a color to associate with each arcane background. Once an individual power has been tied to an arcane background (defaults to the first arcane background), the power row will use the indicator as a background color, allowing you to quickly identify which arcane background each power goes with.  The power points display will also use the Arcane Background Indicator as the background color as quick reminder of what each color represents.",
     "fixed-copyright-issue": "Fixed the copyright notification issues.",
     "start-attributes-at-d6-not-d4": "Attributs par défaut à d6 au lieu de d4",
+	"fix-rename-climbing-piloting-translations":"Fix translations for Renaming Piloting and Climbing skills.",
+	"fix-attempt-allow-skill-on-by-default":"Attempt to fix skills in Game Settings being all disabled by default (instead of enabled)",
+	"change-linked-attribute-of-any-skill":"Ability to change linked attribute of any skill.",
+	"enable-soak-from-settings":"Can enable/disable Soak button from the game settings.",
+	"easier-disallow-skill-from-setting":"Made it easier to enable/disable a skill in a setting (can click the skill name, not just the checkbox, in config panel)",
     "effect": "Effet",
     "activate-talisman": "Activer Talisman",
 	"added-talismans-section": "(Re-)Added Talismans section (activate in configuration tab)",
