update translations uc-695

--- a/Bluebeard's Bride/translations/fr.json
+++ b/Bluebeard's Bride/translations/fr.json
@@ -118,21 +118,21 @@
 	"propose-a-truth-desc": "\nLorsque vous <em>proposez une vérité</em> à propos d'une pièce, détaillez ce que vous pensez être arrivé dans cette pièce, à qui et pourquoi.\nEnsuite décrivez le jeton que vous choisissez pour supporter votre interprétation des événements et marquez le sur le compteur approprié.                ",
 	"propose-a-truth-desc2": "\nSi c'est un <em>jeton de loyauté</em>, vous êtes proches de prouver que votre confiance en votre époux est bien fondée. Soignez 1 Trauma.                ",
 	"propose-a-truth-desc3": "\nSi c'est un <em>jeton d'infidélité</em>, vous êtes plus proche de prouver que vos suspicions désobligeante concernant votre époux sont vraies. Subissez un Trauma.                ",
-	"the-bride": "The Bride",
-	"the-bride-desc": "\n        Use this page to track the Bride's progress thru the mansion.\n        When the Bride aquires Tokens of <em>Faithfulness</em> and\n        <em>Disloyalty</em>, click the appropriate icon, and enter information\n        about the Token in the text boxes.\n    ",
-	"faithfulness": "faithfulness",
-	"disloyalty": "disloyalty",
-	"help": "Help",
-	"help-desc": "\n        Select different sections of the playsheet using the tabs at the top \n        of the page. The currently selected section will have a white border \n        and text.\n    ",
-	"the-sisters-desc": "\n        This page contains information for individual sisters, all displayed\n        on a single page. Use the tabs at the top to toggle visibility of the\n        <em>Sisterly Bonds</em>, and <em>Wedding Preparation</em> sections.\n        Add a new sister using the \"Add\" button at the bottom of the page. \n        Use the \"Modify\" button to change the order of the sisters, or remove\n        a sister.\n    ",
-	"adding-a-new-sister": "Adding a New Sister",
-	"adding-a-new-sister-desc": "\n        When a new sister is added, click on the sister's playbook name to \n        bring up a dropdown box. In the <em>Stats</em> section, use the arrows\n        next to each number to increase or decrease the stats. \n        In the <em>Face</em> section, click the face title to bring up a\n        dropdown menu, just as with the playbook. Use the tabs at the top of \n        the page to display the <em>Sisterly Bonds</em> and <em>Wedding Prep</em>.\n    ",
-	"stats-trauma-passing-the-ring": "Stats, Trauma, and Passing the Ring",
-	"stats-trauma-passing-the-ring-desc": "\n        Click the name of each Stat to make a roll with that stat. \n    ",
-	"stats-trauma-passing-the-ring-desc2": "\n        Click the heart icons in the <em>Trauma</em> section to increase\n        and decrease the Sister's Trauma. You can reset the Trauma completely\n        by clicking the \"Trauma\" title.\n        When a Sister reaches 5 Trauma, her block will automatically change to \n        the \"Shattered\" block. If a Sister is shattered accidentally, you can\n        \"unshatter\" her block by clicking the heart icon.\n    ",
-	"stats-trauma-passing-the-ring-desc3": "\n        At the top left of each Sister's block is a Ring icon, faded out by \n        default. Click the icon on a Sister's block to pass the ring to that Sister.\n        When rolling Moves, the sheet will automatically use the Stats for the \n        Sister who is currently holding the Ring.\n    ",
-	"the-moves": "The Moves",
-	"the-moves-desc": "\n        This page describes the various moves.\n        The top of this page shows the Sister who is currently holding the Ring.\n        This Sister's Stats will be used, if a move requires a roll.\n    ",
-	"the-moves-desc2": "\n        If a Move calls for a roll, click the name of that Move to make the\n        roll automatically. A black border to will appear when hovering\n        over the name, to indicate that you can make a roll.\n    ",
-	"isrolling": "is rolling"
+	"the-bride": "La Mariée",
+	"the-bride-desc": "\nUtilisez cette page pour suivre la progression de la Mariée à travers le manoir. Lorsque la Mariée obtient des jetons de <em>Loyauté</em> et d'<em>infidélité</em>, cliquez l'icone correspondantes et rentrez les informations à propos des jetons dans les boites de dialogues.    ",
+	"faithfulness": "loyauté",
+	"disloyalty": "infidélité",
+	"help": "Aide",
+	"help-desc": "\nSélectionnez différentes sections de la fiche en utilisant les onglets en haut de la page. L'onglet actuellement sélectionné aura une bordure et un texte en blanc.    ",
+	"the-sisters-desc": "\nCette page contient des informations sur chacune des Sœurs, toutes affichées sur une seule page. Utilisez les onglets en haut pour afficher ou non les sections des <em>Liens Sororaux</em> et de la <em>Préparation du Mariage</em>. Ajoutez une nouvelle Sœur en utilisant le bouton \"Ajouter\" au bas de la page. Utilisez le bouton \"Modifier\" pour changer l'ordre des Sœurs ou en supprimer une.    ",
+	"adding-a-new-sister": "Ajouter une Sœur",
+	"adding-a-new-sister-desc": "\nLorsqu'une Sœur est ajoutée, cliquez sur son nom pour afficher une boite de dialogue. Dans la section <em>Caractéristiques</em>, utilisez les flèches des compteurs pour les augmenter ou les diminuer. Dans la section <em>Visage</em>, cliquez sur le titre pour afficher une liste. Utilisez les onglets en haut de la fiche pour afficher les sections <em>Liens Sororaux</em> et <em>Préparation au Mariage</em>.    ",
+	"stats-trauma-passing-the-ring": "Caractéristiques, Trauma et Passer l'Anneau",
+	"stats-trauma-passing-the-ring-desc": "\nCliquez sur le nom d'une caractéristique pour effectuer un jet de celle-ci.    ",
+	"stats-trauma-passing-the-ring-desc2": "\nCliquez sur les icônes de cœur dans la section <em>Trauma</em> pour augmenter et diminuer les traumatisme de la Sœur. Vous pouvez les remettre à zéro complètement en cliquant sur le titre \"Trauma\". Lorsqu'une Sœur atteint 5 Traumas, la section va automatiquement changée pour devenir la section Brisée. Si la section s'affiche accidentellement, vous pouvez remettre la section comme avant en cliquant sur l’icône de cœur.    ",
+	"stats-trauma-passing-the-ring-desc3": "\nEn haut à gauche de chaque fiche de Sœurs se trouve l'icône d'Anneau, effacée de base. Cliquez sur l'icône pour passer l'Anneau à cette Sœur. Lors des jets d'Action, la fiche utilisera automatiquement les Caractéristiques de la Sœur possédant l'Anneau.    ",
+	"the-moves": "Les Actions",
+	"the-moves-desc": "\nCette page décrit les différentes actions. Le haut de page montre la Sœur en possession de l'Anneau. Les caractéristiques de cette Sœur seront utilisées en cas de jet de dés.    ",
+	"the-moves-desc2": "\nSi une Action est utilisée pour un jet, cliquez sur le nom de cette Action pour en faire un jet automatiquement. Une bordure noire apparaîtra en passant le curseur sur le nom pour indiquer que vous pouvez effectuer un jet.    ",
+	"isrolling": "en cours de lancer"
 }
