--- a/Monsterhearts-2/translations/es.json
+++ b/Monsterhearts-2/translations/es.json
@@ -1,6 +1,6 @@
 {
 	"lbl-name": "Nombre",
-	"lbl-pronouns": "Pronombre",
+	"lbl-pronouns": "Mote",
 	"lbl-skin": "Piel",
 	"lbl-look": "Apariencia",
 	"lbl-origin": "Origen",
