--- a/Pathfinder Second Edition by Roll20/translations/zh.json
+++ b/Pathfinder Second Edition by Roll20/translations/zh.json
@@ -364,7 +364,7 @@
 	"intimidation_settings": "威嚇設定",
 	"intimidation_temporary": "威嚇臨時加值",
 	"inventory": "物品欄",
-	"invest": "invest",
+	"invest": "綁定",
 	"invest_max_10": "invest (max 10)",
 	"item": "物品",
 	"item_name": "物品名稱",
