--- a/WFRP4CharSheet/translations/fr.json
+++ b/WFRP4CharSheet/translations/fr.json
@@ -1,6 +1,6 @@
 {
 	"Name": "Nom",
-	"Species": "Espèce",
+	"Species": "Race",
 	"Class": "Classe",
 	"Career": "Carrière",
 	"Career-tier": "Échelon",
@@ -20,25 +20,25 @@
 	"S": "F",
 	"T": "E",
 	"I": "I",
-	"Ag": "(Ag)",
+	"Ag": "Ag",
 	"Dex": "Dex",
 	"Int": "Int",
 	"WP": "FM",
 	"Fel": "Soc",
 	"Initial": "Initiales",
 	"Talents": "Talents",
-	"Advances": "Avancées",
+	"Advances": "Augmentées",
 	"Modifier": "Modificateur",
-	"Current": "Actuel",
+	"Current": "Courantes",
 	"CHARACTERISTICS BONUSES": "BONUS DE CARACTÉRISTIQUES",
 	"FATE": "DESTIN",
-	"RESILIENCE": "PERSÉVÉRANCE",
+	"RESILIENCE": "RÉSILIENCE",
 	"EXPERIENCE": "EXPÉRIENCE",
 	"Fate": "Destin",
 	"Resilience": "Résilience",
 	"Total": "Total ",
 	"Fortune": "Chance",
-	"Resolve": "Résolution",
+	"Resolve": "Détermination",
 	"Spent": "Dépensés",
 	"Motivation": "Motivation",
 	"Left": "Restant",
@@ -47,7 +47,7 @@
 	"Personal-Long-Term": "Personnel à Long terme",
 	"Party-Short-Term": "Groupe à court terme",
 	"Party-Long-Term": "Groupe à long terme",
-	"MOVEMENT": "MOUVEMENT",
+	"MOVEMENT": "Mouvement",
 	"Walk": "Marche",
 	"Run": "Course",
 	"INITIATIVE": "INITIATIVE",
@@ -61,22 +61,22 @@
 	"Trappings": "Possessions",
 	"Mod": "Mod.",
 	"Max-Enc": "Enc. Max",
-	"WEALTH": "RICHESSE",
+	"WEALTH": "RICHESSES",
 	"Gold Crowns": "Couronnes d’or",
 	"Silver Shillings": "Pistoles d'Argent",
 	"Brass Pennies": "Sous de cuivre",
 	"WOUNDS": "BLESSURES",
-	"Hardy": "Robuste",
-	"Hardy-1": "Robuste : 1",
-	"Hardy-2": "Robuste : 2",
-	"Hardy-3": "Robuste : 3",
-	"Hardy-4": "Robuste : 4",
-	"Hardy-5": "Robuste : 5",
-	"Hardy-6": "Robuste : 6",
-	"Hardy-7": "Robuste : 7",
-	"Hardy-8": "Robuste : 8",
-	"Hardy-9": "Robuste : 9",
-	"Hardy-10": "Robuste : 10",
+	"Hardy": "Dur à cuire",
+	"Hardy-1": "Dur à cuire : 1",
+	"Hardy-2": "Dur à cuire : 2",
+	"Hardy-3": "Dur à cuire : 3",
+	"Hardy-4": "Dur à cuire : 4",
+	"Hardy-5": "Dur à cuire : 5",
+	"Hardy-6": "Dur à cuire : 6",
+	"Hardy-7": "Dur à cuire : 7",
+	"Hardy-8": "Dur à cuire : 8",
+	"Hardy-9": "Dur à cuire : 9",
+	"Hardy-10": "Dur à cuire : 10",
 	"Tiny": "Minuscule",
 	"Little": "Petit",
 	"Small": "Petit",
@@ -101,30 +101,30 @@
 	"WP-p": "(FM)",
 	"Fel-p": "(Soc)",
 	"Athletics": "Athlétisme",
-	"Bribery": "Corruption",
+	"Bribery": "Subornation",
 	"Charm": "Charme",
 	"Charm-Animal": "Emprise sur les animaux",
 	"Climb": "Escalade",
 	"Cool": "Calme",
 	"Consume Alcohol": "Résistance à l'alcool",
 	"Dodge": "Esquive",
-	"Drive": "Conduite",
+	"Drive": "Conduite d'attelage",
 	"Endurance": "Résistance",
-	"Entertain": "Divertir",
-	"Gamble": "Jeu",
-	"Gossip": "Commérage",
+	"Entertain": "Divertissement",
+	"Gamble": "Pari",
+	"Gossip": "Ragot",
 	"Haggle": "Marchandage",
 	"Intimidate": "Intimidation",
 	"Intuition": "Intuition",
 	"Leadership": "Commandement",
 	"Navigation": "Navigation",
-	"Outdoor-Survival": "Survie à l'extérieur",
+	"Outdoor-Survival": "Survie en extérieur",
 	"Perception": "Perception",
-	"Ride": "Équitation",
-	"Row": "Canotage",
+	"Ride": "Chevaucher",
+	"Row": "Ramer",
 	"Stealth": "Discrétion",
 	"MELEE-SPECIALISATIONS-(BASIC)": "SPÉCIALISATIONS DE MÊLÉE (BASIQUES)",
-	"Melee-i-Basic": "<i>Mêlée</i> (Basic)",
+	"Melee-i-Basic": "<i>Corps à corps</i> (Base)",
 	"Melee-i-Brawling": "<i>Mêlée</i> (bagarre)",
 	"Melee-i-Cavalry": "<i>Mêlée</i> (cavalerie)",
 	"Melee-i-Fencing": "<i>Mêlée</i> (escrime)",
@@ -145,7 +145,7 @@
 	"MAGIC-BLESSINGS-AND-MIRACLES-ADVANCED": "MAGIE, BÉNÉDICTIONS ET MIRACLES (AVANCÉS)",
 	"Language-i-Magick-p": "<i>Langue</i> (Magie)",
 	"Pray": "Prière",
-	"GROUPED-&-ADVANCED-SKILLS": "COMPÉTENCES DE GROUPE &amp; AVANCÉES ",
+	"GROUPED-&-ADVANCED-SKILLS": "COMPÉTENCES GROUPÉES &amp; AVANCÉES",
 	"Head": "Tête",
 	"R.Arm": "Bras D.",
 	"L.Arm": "Bras G.",
@@ -163,7 +163,7 @@
 	"WEAPONS": "ARMES",
 	"Group": "Groupe",
 	"Range/Reach": "Portée/Allonge",
-	"Damage": "Dégât",
+	"Damage": "Dégâts",
 	"Qualities": "Atouts/Défauts",
 	"Melee-Basic": "Mêlée (Basic)",
 	"Melee-Brawling": "Mêlée (bagarre)",
@@ -187,7 +187,7 @@
 	"Extended-Channeling-SL": "NR de Canalisation Étendue",
 	"Sin-Points": "Points de Pêché",
 	"Type": "Type",
-	"CN": "NS",
+	"CN": "NI",
 	"Range": "Portée",
 	"Target": "Cible",
 	"Duration": "Durée",
