--- a/Symbaroum/translations/es.json
+++ b/Symbaroum/translations/es.json
@@ -88,7 +88,7 @@
 	"select": "Selección",
 	"short": "Corta",
 	"special": "Especial",
-	"strong": "Potente",
+	"strong": "Fuerte",
 	"success": "Éxito",
 	"temporary-abbrv": "Temporal",
 	"temporary-corruption": "Corrupción temp.",
