pf2 quantity update

--- a/Pathfinder Second Edition by Roll20/translations/de.json
+++ b/Pathfinder Second Edition by Roll20/translations/de.json
@@ -11,7 +11,7 @@
 	"10th-level": "10. STUFE",
 	"120_feet": "120 feet",
 	"19": "19",
-	"1_creature_or_object": "1 Kreatur oder Objekt",
+	"1_creature_or_object": "1 creature or object",
 	"1d10": "1W10",
 	"1d12": "1W12",
 	"1d4": "1W4",
@@ -28,7 +28,7 @@
 	"4": "4",
 	"4th-level": "4. STUFE",
 	"5": "5",
-	"5_minutes": "5 Minuten",
+	"5_minutes": "5 minutes",
 	"5th-level": "5. STUFE",
 	"6": "6",
 	"60": "60",
@@ -47,12 +47,12 @@
 	"ability_scores": "Fähigkeitswerte",
 	"abjuration": "ABSCHWÖRUNG",
 	"ac": "RK",
-	"acid": "Säure",
-	"acrobatic_settings": "Akrobatik Einstellungen",
+	"acid": "acid",
+	"acrobatic_settings": "acrobatic settings",
 	"acrobatics": "Akrobatik",
-	"acrobatics_ability_input": "Akrobatik Attribut Eingabe",
-	"acrobatics_ability_modifier": "Akrobatik Attribut Mod.",
-	"acrobatics_ability_select": "Akrobatik Fertigkeit wählen",
+	"acrobatics_ability_input": "acrobatics ability input",
+	"acrobatics_ability_modifier": "acrobatics ability modifier",
+	"acrobatics_ability_select": "acrobatics ability select",
 	"acrobatics_armor_pentalty": "acrobatics armor penalty",
 	"acrobatics_item": "acrobatics item",
 	"acrobatics_notes": "acrobatics notes",
