--- a/Pathfinder Second Edition by Roll20/translations/ru.json
+++ b/Pathfinder Second Edition by Roll20/translations/ru.json
@@ -146,8 +146,8 @@
 	"cast": "cast",
 	"catchphrases": "catchphrases",
 	"cha": "cha",
-	"character": "персонаж",
-	"character_name": "имя персонажа",
+	"character": "character",
+	"character_name": "character name",
 	"character_sheet": "character sheet",
 	"characteristics": "characteristics",
 	"charisma": "charisma",
@@ -493,7 +493,7 @@
 	"occultism_temporary": "occultism temporary",
 	"offensive": "offensive",
 	"offensive_or_proactive_abilities": "offensive or proactive abilities",
-	"options": "настройки",
+	"options": "options",
 	"or": "or",
 	"organizations": "organizations",
 	"other": "other",
@@ -530,7 +530,7 @@
 	"personality": "personality",
 	"piercing": "piercing",
 	"platinum_pieces": "platinum pieces",
-	"player_name": "имя игрока",
+	"player_name": "player name",
 	"plus": "plus",
 	"power": "power",
 	"powers": "POWERS",
@@ -700,7 +700,7 @@
 	"spell_dc_temporary": "spell dc temporary",
 	"spell_slots_per_day": "spell slots per day",
 	"spellcasting_npc": "spellcasting npc",
-	"spells": "заклинания",
+	"spells": "spells",
 	"spontaneous": "spontaneous",
 	"spontaneous_spell_caster": "spontaneous spell caster",
 	"spontaneous_spell_slots": "spontaneous spell slots remaining",
