[Eclipse Phase 2] Various update for final version

--- a/Eclipse Phase V2/translations/fr.json
+++ b/Eclipse Phase V2/translations/fr.json
@@ -12,6 +12,7 @@
 	"ego": "Ego",
 	"mental disorder": "Troubles Mentaux",
 	"muse": "Muse",
+	"muse-incarnate": "Muse Incarnée",
 	"morph": "Morphe",
 	"history": "Histoire",
 	"gear": "Équipement",
@@ -42,10 +43,10 @@
 	"insanity rating short": "SA",
 	"insanity rating": "Seuil d'Aliénation",
 	"stress": "Stress",
-	"traumas": "Traumatismes",
+	"traumas": "Traumas",
 	"derived stats": "Statistiques Dérivées",
 	"initiative": "Initiative",
-	"total": "Total ",
+	"total": "Total",
 	"temporary short": "Temp.",
 	"skill": "Compétence",
 	"skills": "Compétences",
@@ -53,7 +54,8 @@
 	"know skills": "Compétences de connaissance",
 	"ranks": "Rang",
 	"specializations": "Spécialisation",
-	"skills-list": "athletics,deceive,exotic skill,fray,free fall,guns,hardware,infiltrate,infosec,interface,kinesics,medicine,melee,perceive,persuade,pilot,profession,program,provoke,psi,research,survival",
+	"skills-list": "guns,athletics,free fall,exotic skill,fray,infiltrate,infosec,interface,kinesics,hardware,medicine,melee,perceive,persuade,pilot,program,provoke,psi,research,deceive,survival",
+	"muse-skills-list": "guns,athletics,free fall,exotic skill,fray,infiltrate,infosec,interface,kinesics,hardware,medicine,melee,perceive,persuade,pilot,program,provoke,research,deceive,survival",
 	"athletics": "Athlétisme",
 	"deceive": "Subterfuge",
 	"exotic skill": "Comp. Éxotique",
@@ -73,11 +75,11 @@
 	"pilot": "Pilotage",
 	"program": "Programmation",
 	"provoke": "Provocation",
-	"psi": "Psy",
+	"psi": "Psi",
 	"psi skill": "Compétence Psi",
 	"research": "Recherche",
 	"survival": "Survie",
-	"psi trait level": "Niveau Aspect Psi",
+	"psi trait level": "Niv. Aspect Psi",
 	"infection": "Infection",
 	"infection test": "Test d'Infection",
 	"sub-strain": "Souche",
@@ -92,7 +94,7 @@
 	"range": "Portée",
 	"action": "Action",
 	"duration": "Durée",
-	"strain mod": "Mod. Infection",
+	"strain mod": "Mod. Inf.",
 	"active": "Actif",
 	"passive": "Passif",
 	"self": "Personnelle",
@@ -106,12 +108,13 @@
 	"instant": "Instant.",
 	"sustained": "Soutenue",
 	"wil/5": "VOL / 5",
-	"description": "Description ",
+	"description": "Description",
 	"ranged weapon": "Armes à Distance",
 	"melee weapon": "Armes de Mêlée",
 	"seeker weapon and grenade": "Missiles et grenades",
 	"damage value": "Valeur de dégâts",
-	"reload": "Rechargement",
+	"firing-mode": "Modes de tir",
+	"ammo": "Munitions",
 	"Semi Auto / Burst Fire / Full Auto short": "SA/TR/TA",
 	"ammo type": "Type mun.",
 	"armor used": "Armure utilisée",
@@ -133,8 +136,9 @@
 	"current": "Actuel",
 	"bioware": "BioWare",
 	"cyberware": "Cyberware",
-	"nanoware": "Nanoware",
+	"hardware-ware": "Hardware",
 	"meshware": "Meshware",
+	"nanoware": "Nanoware",
 	"positive trait": "Aspect Positif",
 	"negative trait": "Aspect Négatif",
 	"notes": "Notes",
@@ -149,19 +153,20 @@
 	"rep": "Rep",
 	"@-rep": "@-Rep",
 	"c-rep": "C-Rep",
-	"e-rep": "E-Rep",
 	"f-rep": "F-Rep",
 	"g-rep": "G-Rep",
 	"i-rep": "I-Rep",
 	"r-rep": "R-Rep",
 	"x-rep": "X-Rep",
 	"language": "Langues",
-	"forks": "Branches",
+	"forks": "Forks",
 	"backup": "Sauvegardes",
 	"rez point": "Points d'XP",
 	"rp spent": "XP Dépensé",
-	"roll public": "Jet Public",
-	"roll private": "Jet Privé",
+	"public roll ?": "Jet Public ?",
+	"Play the muse of another player ?": "Jouer la muse d'un autre joueur ?",
+	"yes": "Oui",
+	"no": "Non",
 	"fray vs ranged": "Esquive vs Distance",
 	"fray vs melee": "Esquive vs Mêlée",
 	"modifiers": "Modif.",
@@ -173,7 +178,7 @@
 	"burst fire +10": "Tir en Rafale (+10 Toucher)",
 	"burst fire +1D10": "Tir en Rafale (+1D10 VD)",
 	"burst fire 2 targets": "Tir en Rafale (2 Cibles)",
-	"full automatic": "Complètement automatique",
+	"full automatic": "Mode automatique",
 	"full automatic +30": "Mode Automatique (+30 Toucher)",
 	"full automatic +2D10": "Mode Automatique (+2D10 VD)",
 	"full automatic 3 targets": "Mode Automatique (3 Cibles)",
