--- a/Pathfinder Second Edition by Roll20/translations/fr.json
+++ b/Pathfinder Second Edition by Roll20/translations/fr.json
@@ -254,7 +254,7 @@
 	"divination": "DIVINATION",
 	"divine power": "POUVOIR DIVIN",
 	"divine spell": "SORT DIVIN",
-	"divine": "divine",
+	"divine": "divin",
 	"dmg": "DEG",
 	"domain": "domaine",
 	"duration": "DURÉE",
@@ -477,6 +477,7 @@
 	"npc_placeholder_saves": "+2 to all saves vs. magic",
 	"npc_placeholder_speed": "20 feet, swim 80 feet",
 	"npc_placeholder_speed_notes": "swim 80 feet",
+	"npc_placeholder_traits": "rare, aquatic, humanoid",
 	"npc_placeholder_worn_item": "+1 shortsword",
 	"occult power": "OCCULT POWER",
 	"occult spell": "OCCULT SPELL",
@@ -545,7 +546,6 @@
 	"proficiencies": "rangs",
 	"proficiency": "rang",
 	"query_whisper_roll": "query whisper roll",
-	"qty": "qt.",
 	"range": "Range",
 	"range_attack_damage": "Dégâts",
 	"range_attack_damage_type": "Type de dégâts",
@@ -579,7 +579,6 @@
 	"ranged_strikes": "attaques à distance",
 	"ranged_weapon_range": "Portée",
 	"rank": "rang",
-	"rare-large": "rare, large, aquatic",
 	"reaction": "réaction",
 	"readied_item_bulk": "Encombrement",
 	"readied_item_name": "Nom",
@@ -700,7 +699,7 @@
 	"spell_dc_rank": "spell dc rank",
 	"spell_dc_temporary": "Mod. temporaire",
 	"spell_slots_per_day": "emplacement de sorts par jour",
-	"spellcasting_npc": "spellcasting npc",
+	"spellcaster": "spellcaster",
 	"spells": "sorts",
 	"spontaneous": "spontané",
 	"spontaneous_spell_caster": "Lanceur de sorts spontanés",
@@ -805,5 +804,7 @@
 	"disclaimer": "© 2019 Paizo Inc. Paizo, le logo du golem de Paizo, Pathfinder et le logo Pathfinder sont des marques déposées de Paizo Inc. Pathfinder Adventure Paths, Pathfinder Roleplaying Game, Pathfinder World Guide et le logo \"P\" de Pathfinder sont des marques de Paizo Inc. Tous les titres de Paizo et les noms de personnages de Paizo et les ressemblances significatives sont la propriété et le copyright de Paizo, Inc. aux États-Unis et dans les autres pays.",
 	"pc-or-npc": "PC or NPC",
 	"pc-or-npc-info": "This option sets new characters to default to the PC character sheet or NPC card style sheet. It defaults to PC (Player Character). Set to NPC is useful if the player characters have already been created and all new character sheets added to the game will likely represent non player characters.",
+	"qty": "qt.",
+	"quantity": "quantity",
 	"whisp-rolls-gm-info": "All sheet rolls are sent to all players in chat by default. Query Whisper option gives you a prompt with each roll of whether or not the roll should be sent privately only to yourself and the GM. Always Whisper Rolls will send all rolls only to yourself and the GM."
 }
