[Upgrade] Merger with previous update

--- a/Eclipse Phase V2/translations/fr.json
+++ b/Eclipse Phase V2/translations/fr.json
@@ -90,7 +90,6 @@
 	"psi-chi sleights": "Passe Psi-Chi",
 	"psi-gamma sleights": "Passe Psi-Gamma",
 	"effect": "Effet",
-	"type": "Type",
 	"range": "Portée",
 	"action": "Action",
 	"duration": "Durée",
@@ -107,7 +106,9 @@
 	"constant": "Constant",
 	"instant": "Instant.",
 	"sustained": "Soutenue",
-	"wil/5": "VOL / 5",
+	"action turns": "Tour(s) d'action",
+	"minutes": "Minute(s)",
+	"hours": "Heure(s)",
 	"description": "Description",
 	"ranged weapon": "Armes à Distance",
 	"melee weapon": "Armes de Mêlée",
@@ -163,10 +164,8 @@
 	"backup": "Sauvegardes",
 	"rez point": "Points d'XP",
 	"rp spent": "XP Dépensé",
-	"public roll ?": "Jet Public ?",
-	"Play the muse of another player ?": "Jouer la muse d'un autre joueur ?",
-	"yes": "Oui",
-	"no": "Non",
+	"roll public": "Jet Public",
+	"roll private": "Jet Privé",
 	"fray vs ranged": "Esquive vs Distance",
 	"fray vs melee": "Esquive vs Mêlée",
 	"modifiers": "Modif.",
@@ -178,15 +177,15 @@
 	"burst fire +10": "Tir en Rafale (+10 Toucher)",
 	"burst fire +1D10": "Tir en Rafale (+1D10 VD)",
 	"burst fire 2 targets": "Tir en Rafale (2 Cibles)",
-	"full automatic": "Mode automatique",
-	"full automatic +30": "Mode Automatique (+30 Toucher)",
-	"full automatic +2D10": "Mode Automatique (+2D10 VD)",
-	"full automatic 3 targets": "Mode Automatique (3 Cibles)",
-	"full automatic suppressive fire": "Mode Automatique (Tir de Suppression)",
+	"full automatic": "Tir automatique",
+	"full automatic +30": "Tir Automatique (+30 Toucher)",
+	"full automatic +2D10": "Tir Automatique (+2D10 VD)",
+	"full automatic 3 targets": "Tir Automatique (3 Cibles)",
+	"full automatic suppressive fire": "Tir Automatique (Tir de Suppression)",
 	"bonus hit": "Bonus Toucher",
 	"bonus dv": "Bonus VD",
 	"superior result": "Résultat Supérieur",
-	"superior result damage": "Résultat Supérieur (Damage)",
+	"superior result damage": "Résultat Supérieur (Dégâts)",
 	"micro ex": "Micro...",
 	"emp gas ex": "IEM, Gaz, ..."
 }
