--- a/Pathfinder Second Edition by Roll20/translations/fr.json
+++ b/Pathfinder Second Edition by Roll20/translations/fr.json
@@ -778,7 +778,7 @@
 	"weapon_proficiencies": "Maniement des armes",
 	"weight": "poids",
 	"whisper_rolls_to_gm": "murmurer les jets au mj",
-	"will": "will",
+	"will": "Volonté",
 	"will-save": "volonté",
 	"will_item": "Mod. d'Objet",
 	"will_saving_throw_ability": "Caractéristique",
