--- a/Pathfinder Second Edition by Roll20/translations/fr.json
+++ b/Pathfinder Second Edition by Roll20/translations/fr.json
@@ -207,7 +207,7 @@
 	"critical_failure": "échec critique",
 	"critical_success": "réussite critique",
 	"current": "actuel",
-	"custom": "personnalisée",
+	"custom": "perso.",
 	"d6": "d6",
 	"daily-uses": "utilisation quotidienne",
 	"damage": "dégât",
@@ -497,8 +497,8 @@
 	"options": "options",
 	"or": "ou",
 	"organizations": "organisations",
-	"other": "Dgt. sup.",
-	"other_effects": "other effects",
+	"other": "Autres",
+	"other_effects": "Autres effets",
 	"other_item_bulk": "Encombrement",
 	"other_item_name": "Nom",
 	"other_item_notes": "Notes",
